[package]
name = "radon_counter_embassy"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-stm32 = { version = "0", features = ["defmt", "stm32u073cc", "unstable-pac", "time-driver-any", "exti", "memory-x"]  }
embassy-executor = { version = "0", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }

defmt = "1"
defmt-rtt = "1"
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "1", features = ["print-defmt"] }
embassy-embedded-hal = "0"
static_cell = "2.1.0"
portable-atomic = { version = "1.11.1", features = ["unsafe-assume-single-core"] }
embassy-sync = "0.7.0"
embassy-usb = { version = "0.5.1", default-features = false, features = ["defmt"] }
embassy-futures = { version = "0.1.2", features = ["defmt"] }

[profile.dev]
lto = true
opt-level = "s"
incremental = false
codegen-units = 1
# note: debug = true is okay - debuginfo isn't flashed to the device!
debug = true
