[package]
name = "radon_counter_embassy"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-stm32 = { path = "..\\embassy\\embassy-stm32", features = ["defmt", "stm32u073cc", "unstable-pac", "time-driver-any", "exti", "memory-x"]  }
embassy-executor = { path = "..\\embassy\\embassy-executor", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { path = "..\\embassy\\embassy-time", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-usb = { path = "..\\embassy\\embassy-usb", default-features = false, features = ["defmt"] }
embassy-futures = { path = "..\\embassy\\embassy-futures", features = ["defmt"] }
embassy-sync = { path = "..\\embassy\\embassy-sync" }
embassy-embedded-hal = { path = "..\\embassy\\embassy-embedded-hal" }

defmt = "1"
defmt-rtt = "1"
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "1", features = ["print-defmt"] }
static_cell = "2.1.0"
portable-atomic = { version = "1.11.1", features = ["unsafe-assume-single-core"] }
embedded-sdmmc = "0.9.0"

[profile.dev]
lto = true
opt-level = "s"
incremental = false
codegen-units = 1
debug = true
